# lattice

./: .gitignore  APP_API.md  BOOTSTRAP.md  Cargo.toml  README.md
.github/workflows/: actionlint.yml  localnet-ci.yml  platform-smoke.yml  release-extension.yml  release-fray.yml  release-lattice.yml
fray/: Cargo.toml  README.md  build.rs
fray/site/: index.html  lattice.json
fray/src/: api.rs  blocklist.rs  directory.rs  handle.rs  lib.rs  main.rs  model.rs  network.rs  routes.rs  store.rs  trust.rs  ui.rs
lattice/: Cargo.toml
lattice-cli/: Cargo.toml
lattice-cli/src/: main.rs  rpc.rs
lattice-core/: Cargo.toml
lattice-core/src/: app_namespace.rs  app_registry_record.rs  identity.rs  lib.rs  moderation.rs  registry.rs
lattice-daemon/: Cargo.toml  README.md
lattice-daemon/src/: app_ownership.rs  app_registry.rs  block_fetch.rs  cache.rs  config.rs  dht.rs  event_loop.rs  fetch.rs  http_server.rs  lib.rs  main.rs  mime.rs  moderation_helpers.rs  names.rs  node.rs  proxy_server.rs  publish.rs  rpc.rs  site_helpers.rs  store.rs  tls.rs  transport.rs
lattice-daemon/tests/: integration.rs
lattice-ext/: INSTALL.md  background.js  config.js  content.js  manifest.json  popup.html  popup.js  setup-helpers.js  setup.html  setup.js  site-detect.js
lattice-ext/tests/: background.test.mjs  setup-helpers.test.mjs  site-detect.test.mjs
lattice-ext/tests/fixtures/: site-page-badge.js
lattice-site/: Cargo.toml
lattice-site/src/: fetcher.rs  lib.rs  manifest.rs  publisher.rs
lattice-spec/: README.md
lattice/src/: main.rs  rpc.rs
loom/: Cargo.toml
loom/src/: channel.rs  main.rs  messages.rs  scrollback.rs
packaging/apt/: README.md  build_repo.py  lattice.sources.example
packaging/aur/lattice-git/: .SRCINFO  PKGBUILD  README.md  lattice-daemon.service
packaging/aur/lattice-net-bin/: .SRCINFO  PKGBUILD  README.md  lattice-daemon.service  lattice-net-bin.install
packaging/aur/lattice-net-git/: .SRCINFO  PKGBUILD  README.md
packaging/homebrew/lattice-net/: README.md  render_formula.py
packaging/homebrew/lattice-net/Formula/: lattice-net.rb.template
packaging/shared/: restart-daemon-if-active.sh
packaging/tests/: test_release_packaging.py
packaging/windows/msi/: Lattice.wxs  README.md  Test-Msi.ps1  Test-Msi.vbs  build-msi.ps1
packaging/windows/msi/assets/: Lattice Firefox Extension.url  Lattice Getting Started.url  Remove-LatticeData.cmd  Remove-LatticeData.ps1
scripts/: bootstrap-apt-repo.sh  bootstrap-homebrew-tap.sh  build_chrome_crx.sh  build_extension.py  localnet.sh  localnet_stress.sh  publish-fray-app.sh  test_build_extension.py  test_extension.sh
tools/topology-viewer/: README.md  collect_localnet_topology.py  index.html
