[package]
name = "lattice-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.7"
base64 = "0.22"
directories = "5"
ed25519-dalek = "2"
hex = "0.4"
jsonrpsee = { version = "0.24", features = ["server"] }
lattice-site = { path = "../lattice-site" }
libp2p = { version = "0.56", features = ["tokio", "tcp", "quic", "noise", "yamux", "kad", "mdns", "gossipsub", "macros", "identify", "autonat", "relay", "dcutr"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sled = "0.34"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
toml = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
