[package]
name = "lattice-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
axum = "0.7"
axum-server = { version = "0.8", features = ["tls-rustls"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
directories = "5"
ed25519-dalek = "2"
hex = "0.4"
infer = "0.19"
jsonrpsee = { version = "0.24", features = ["server", "http-client"] }
lattice-core = { path = "../lattice-core" }
lattice-site = { path = "../lattice-site" }
libc = "0.2"
libp2p = { version = "0.56", features = ["tokio", "tcp", "quic", "noise", "yamux", "kad", "mdns", "gossipsub", "macros", "identify", "autonat", "relay", "dcutr", "request-response", "cbor"] }
lru = "0.16"
rand = "0.8"
rcgen = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sled = "0.34"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tokio-stream = "0.1"
toml = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }
windows-service = "0.8"

[dev-dependencies]
tempfile = "3"
