[package]
name = "lattice-site"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
ed25519-dalek = "2"
globset = "0.4"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
