[package]
name = "lattice"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lattice"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "5"
ed25519-dalek = "2"
getrandom = "0.2"
lattice-core = { path = "../lattice-core" }
lattice-site = { path = "../lattice-site" }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
toml = "1"
